plugins {
	id 'java'
	id 'org.springframework.boot' version '4.0.7'
	id 'io.spring.dependency-management' version '1.1.7'
	id 'org.graalvm.buildtools.native' version '0.11.5'
}

group = 'com.vinayappari'
version = '0.0.1-SNAPSHOT'

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(25)
	}
}

repositories {
	mavenCentral()
}

ext {
	set('springAiVersion', "2.0.0")
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter-actuator'
	implementation 'org.springframework.boot:spring-boot-starter-validation'
	implementation 'org.springframework.boot:spring-boot-starter-web'
	implementation 'com.bucket4j:bucket4j-core:8.10.1'
	implementation 'org.springframework.ai:spring-ai-starter-model-deepseek'

	testImplementation 'org.springframework.boot:spring-boot-starter-actuator-test'
	testImplementation 'org.springframework.boot:spring-boot-starter-validation-test'
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
}

dependencyManagement {
	imports {
		mavenBom "org.springframework.ai:spring-ai-bom:${springAiVersion}"
	}
}

tasks.named('test') {
	useJUnitPlatform()
}

// Configures native arguments for ./gradlew nativeCompile
graalvmNative {
	binaries {
		main {
			buildArgs.add('--enable-native-access=ALL-UNNAMED')
		}
	}
}

// Configures native arguments for ./gradlew bootBuildImage (Paketo Buildpacks)
bootBuildImage {
	imageName = "${project.findProperty('imageName')}"
	imagePlatform = "linux/amd64"
	environment = [
			'BP_NATIVE_IMAGE_BUILD_ARGUMENTS': '--enable-native-access=ALL-UNNAMED'
	]
}